--- a/HelpDesk.Web/HelpDesk.Web.csproj
+++ b/HelpDesk.Web/HelpDesk.Web.csproj
@@ -683,6 +683,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="GeoCoordinate" Version="2.0.1" />
     <PackageReference Include="LigerShark.WebOptimizer.Core" Version="1.0.236" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
